--- a/MovieProject/Views/Movie/MovieList.cshtml
+++ b/MovieProject/Views/Movie/MovieList.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="tbl-container">
-    <h2>Movies</h2>
+    <h2>Genres</h2>
 
     <table>
         <tr>
@@ -15,21 +15,22 @@
             <th>Director</th>
             <th>Action</th>
         </tr>
-        @foreach(var item in Model.MovieList){
-        <tr>
-            <td>@item.Title</td>
-               @* <td>@item.GenreName</td> *@
+        @foreach (var item in Model.MovieList)
+        {
+            <tr>
+                <td>@item.Title</td>
+                <td>@item.GenreNames</td>
                 <td>@item.ReleaseYear</td>
-            <td><img style="height:60px;width:80px" src="/Uploads/@item.MovieImage"/></td>
+                <td><img style="height:60px;width:80px" src="/Uploads/@item.MovieImage" /></td>
                 <td>@item.Cast</td>
                 <td>@item.Director</td>
                 <td>
-                <a href="/Movie/Edit?id=@item.Id" class="btn btn-default"><i class="fa fa-edit"></i></a>
-                <a onclick="return window.confirm('Are you sure?')" href="/Movie/Delete?id=@item.Id" class="btn btn-danger"><i class="fa fa-trash"></i></a>
-            </td>
-        </tr>
+                    <a href="/Movie/Edit?id=@item.Id" class="btn btn-default"><i class="fa fa-edit"></i></a>
+                    <a onclick="return window.confirm('Are you sure?')" href="/Movie/Delete?id=@item.Id" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                </td>
+            </tr>
         }
-     
+
     </table>
     <div class="input-container">
         <a href="/Movie/Add" class="btn btn-sec">Back</a>
