--- a/MovieProject/Views/Shared/_Layout.cshtml
+++ b/MovieProject/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         @RenderBody()
     </div>
     <footer>
-        &#169; @DateTime.UtcNow.Year Ravindra Devrani
+        &#169; @DateTime.UtcNow.Year Manar Bouoni
     </footer>
 </body>
 </html>
